# comstop

./: .gitignore  README  setup.cfg
comstop/: shell.py
etc/: comstop.example
