[metadata]
name = comstop
summary = ssh command restrictor
author = Derek Higgins
author-email = higginsd@gmail.com
classifier =
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[files]
packages = comstop

[entry_points]
console_scripts =
    comstop = comstop.shell:main

